--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             method="POST"
             id="formulario"
             name="contacto"
-            netlify
+            data-netlify="true"
           >
             <div class="input-group">
               <div class="input-box">
@@ -245,6 +245,7 @@
                 <input
                   type="text"
                   id="name"
+                  name="name"
                   placeholder="Tu Nombre"
                   required
                   minlength="3"
@@ -255,6 +256,7 @@
                 <label for="phone">Teléfono</label>
                 <input
                   type="tel"
+                  name="tel"
                   id="phone"
                   placeholder="Tu Teléfono"
                   required
@@ -265,12 +267,19 @@
             </div>
             <div class="input-box">
               <label for="email">Correo</label>
-              <input type="email" id="email" placeholder="Tu Email" required />
+              <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Tu Email"
+                required
+              />
             </div>
             <div class="input-box">
               <label for="message">Mensaje</label>
               <textarea
                 id="message"
+                name="message"
                 placeholder="Escribe tu mensaje aquí"
                 required
               ></textarea>
